--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 *.ipynb filter=git-crypt diff=git-crypt
 Main.scala filter=git-crypt diff=git-crypt
 FunSets.scala filter=git-crypt diff=git-crypt
+MaxPairwiseProduct.scala filter=git-crypt diff=git-crypt
+MaxPairwiseProduct.sc filter=git-crypt diff=git-crypt
