Add fibonacci graded to the gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,5 @@ FunSets.scala filter=git-crypt diff=git-crypt
 TweetSet.scala filter=git-crypt diff=git-crypt
 MaxPairwiseProduct.scala filter=git-crypt diff=git-crypt
 MaxPairwiseProduct.sc filter=git-crypt diff=git-crypt
+FibonacciImp.scala filter=git-crypt diff=git-crypt
+Fibonacci.sc filter=git-crypt diff=git-crypt
