--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@ MaxPairwiseProduct.scala filter=git-crypt diff=git-crypt
 MaxPairwiseProduct.sc filter=git-crypt diff=git-crypt
 FibonacciImp.scala filter=git-crypt diff=git-crypt
 Fibonacci.sc filter=git-crypt diff=git-crypt
+FibonacciImp.hs filter=git-crypt diff=git-crypt
