--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,4 @@ Fibonacci.sc filter=git-crypt diff=git-crypt
 FibonacciImp.hs filter=git-crypt diff=git-crypt
 FibonacciLastDigitImp.scala filter=git-crypt diff=git-crypt
 FibonacciLastDigitImp.hs filter=git-crypt diff=git-crypt
+FibonacciLastDigitImp2.hs filter=git-crypt diff=git-crypt
