Add Haskell And scala solutions to .gitattribute

--- a/.gitattributes
+++ b/.gitattributes
@@ -13,3 +13,4 @@ FibonacciLastDigitImp.hs filter=git-crypt diff=git-crypt
 FibonacciLastDigitImp2.hs filter=git-crypt diff=git-crypt
 GcdImp.scala filter=git-crypt diff=git-crypt
 Gcd.sc filter=git-crypt diff=git-crypt
+GcdImp.hs filter=git-crypt diff=git-crypt
