--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@ MaxPairwiseProduct.sc filter=git-crypt diff=git-crypt
 *Imp.sc filter=git-crypt diff=git-crypt
 *Imp.hs filter=git-crypt diff=git-crypt
 Huffman.scala filter=git-crypt diff=git-crypt
+Anagrams.scala filter=git-crypt diff=git-crypt
