--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ project/plugins/project/
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+*.iml
+workspace.xml
 
 # ENSIME specific
 .ensime_cache/
