--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,4 @@ Anagrams.scala filter=git-crypt diff=git-crypt
 
 TweetLength.scala filter=git-crypt diff=git-crypt
 Polynomial.scala filter=git-crypt diff=git-crypt
+Calculator.scala filter=git-crypt diff=git-crypt
