Add file for crypting

--- a/.gitattributes
+++ b/.gitattributes
@@ -19,3 +19,4 @@ TweetLength.scala filter=git-crypt diff=git-crypt
 Polynomial.scala filter=git-crypt diff=git-crypt
 Calculator.scala filter=git-crypt diff=git-crypt
 package.scala filter=git-crypt diff=git-crypt
+VerticalBoxBlur.scala filter=git-crypt diff=git-crypt
