--- a/.gitattributes
+++ b/.gitattributes
@@ -21,3 +21,4 @@ Calculator.scala filter=git-crypt diff=git-crypt
 package.scala filter=git-crypt diff=git-crypt
 VerticalBoxBlur.scala filter=git-crypt diff=git-crypt
 HorizontalBoxBlur.scala filter=git-crypt diff=git-crypt
+ParallelCountChangeSuite.scala filter=git-crypt diff=git-crypt
