Add ParallelParenthesesBalancing.scala for crypting

--- a/.gitattributes
+++ b/.gitattributes
@@ -22,3 +22,4 @@ package.scala filter=git-crypt diff=git-crypt
 VerticalBoxBlur.scala filter=git-crypt diff=git-crypt
 HorizontalBoxBlur.scala filter=git-crypt diff=git-crypt
 ParallelCountChangeSuite.scala filter=git-crypt diff=git-crypt
+ParallelParenthesesBalancing.scala filter=git-crypt diff=git-crypt
