Add KMeans.scala to gitcrypt

--- a/.gitattributes
+++ b/.gitattributes
@@ -24,3 +24,4 @@ HorizontalBoxBlur.scala filter=git-crypt diff=git-crypt
 ParallelCountChangeSuite.scala filter=git-crypt diff=git-crypt
 ParallelParenthesesBalancing.scala filter=git-crypt diff=git-crypt
 LineOfSight.scala filter=git-crypt diff=git-crypt
+KMeans.scala filter=git-crypt diff=git-crypt
