--- a/.gitattributes
+++ b/.gitattributes
@@ -27,3 +27,4 @@ LineOfSight.scala filter=git-crypt diff=git-crypt
 KMeans.scala filter=git-crypt diff=git-crypt
 Simulator.scala filter=git-crypt diff=git-crypt
 WikipediaRanking.scala filter=git-crypt diff=git-crypt
+StackOverflow.scala filter=git-crypt diff=git-crypt
